syntax = "proto3";


option go_package = "/proto-server";

message Item {
    string id=1;
    string title =2;
    string description = 3;
    double damage = 4;
}

message ItemRequest {
    string id =1;
}

message ItemsList {
    repeated Item data = 1;
}

service ItemService {
    rpc FindItems(stream ItemRequest) returns (ItemsList);
}